diff_halfMatch -> ReadOnlySpanExtensions.FindHalfMatch

--- a/source/SharpDmp/SharpDmp.csproj
+++ b/source/SharpDmp/SharpDmp.csproj
@@ -7,4 +7,7 @@
         <WarningsAsErrors>true</WarningsAsErrors>
     </PropertyGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="SharpDmp.UnitTests" />
+    </ItemGroup>
 </Project>
